# open-agent

./: .coverage  CHANGELOG.md  CONTRIBUTING.md  OPENAGENT.md  README.md  ROADMAP.md  SECURITY.md  coverage.xml  openagent_analysis_report.md  pyproject.toml  setup.bat  setup.ps1  setup.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  refactor.yml  security.yml
.github/workflows/: ci.yml  codeql.yml  opencalc-studio.yml  promote-release-candidate.yml  youtube-operations-console.yml
docs/: architecture.md  baseline-0.1.4.md  github-governance.md
examples/: OPENAGENT.example.md
examples/opencalc-studio/: .gitignore  .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
examples/youtube-operations-console/: .env.example  .gitignore  OPENAGENT.md  README.md
examples/youtube-operations-console/apps/api/: Dockerfile  alembic.ini  pyproject.toml
examples/youtube-operations-console/apps/api/alembic/: env.py
examples/youtube-operations-console/apps/api/alembic/versions/: 0001_foundation.py
examples/youtube-operations-console/apps/api/src/signal_api/: __init__.py  db_models.py  domain.py  main.py  models.py  routing.py  security.py
examples/youtube-operations-console/apps/api/tests/: test_contract.py
schemas/: event.schema.json  result.schema.json
scripts/: check_critical_coverage.py  coverage_floors.txt  rc_soak_check.py
tests/: conftest.py  fakecli.py  tui_helpers.py
(+212 files in other folders)
