[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signal-youtube-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "alembic==1.16.5",
  "fastapi==0.116.1",
  "httpx==0.28.1",
  "psycopg[binary]==3.2.10",
  "pydantic==2.11.7",
  "sqlalchemy==2.0.41",
  "uvicorn==0.35.0",
]

[project.optional-dependencies]
dev = [
  "mypy==2.3.0",
  "pytest==8.4.1",
  "pytest-asyncio==1.1.0",
  "ruff==0.15.22",
]

[tool.hatch.build.targets.wheel]
packages = ["src/signal_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
